--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,13 @@
 body {
     background-color: #221e1e;
     color: aliceblue;
+
 }
 
 .container {
     padding: 3vh;
+}
+
+hr {
+    background-color: aliceblue;
 }
